Usunięcie pola sourcePath z klasy JPGUtility